# DynValues

./: CMakeLists.txt
src/: main.cpp
src/auxillary_classes/headers/: SmartPointer.hpp
src/exceptions/: IncompatibleValueTypesException.hpp  NonIterableValueTypeException.hpp  NullValueException.hpp  UnableToTransformException.hpp  WrongArithmeticOperationException.hpp
src/tables/headers/: BaseTable.hpp  ITable.hpp
src/values/headers/: AbstractValue.hpp  AutoValue.hpp  CharValue.hpp  DateValue.hpp  DoubleValue.hpp  IValue.hpp  IntValue.hpp  NullValue.hpp  StringValue.hpp  UnsignedLongIntValue.hpp  VectorValue.hpp
src/values/sources/: AutoValue.cpp  CharValue.cpp  DateValue.cpp  DoubleValue.cpp  IntValue.cpp  NullValue.cpp  StringValue.cpp  UnsignedLongIntValue.cpp  VectorValue.cpp
